--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -82,7 +82,14 @@
         <div class="wrapper">
           <ul class="header-top-social-list">
 
-            <li>
+             <!-- Add Sierra Leone Flag -->
+             <li>
+              <a href="#" class="header-top-social-link">
+                <img src="./images/sl.png" alt="Sierra Leone" style="width: 20px; height: 20px; border-radius: 50%;">
+              </a>
+            </li>
+
+            <!-- <li>
               <a href="#" class="header-top-social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
@@ -104,7 +111,7 @@
               <a href="#" class="header-top-social-link">
                 <ion-icon name="logo-pinterest"></ion-icon>
               </a>
-            </li>
+            </li> -->
 
           </ul>
           <form action="/login" method="get">
