--- a/views/include/_edit-user.ejs
+++ b/views/include/_edit-user.ejs
@@ -210,6 +210,16 @@
         </select>
         </div>
       </div>
+      <div class="formbold-input-flex">
+        <div>
+          <label for="manager" class="formbold-form-label">General Manager: </label>
+          <select id="manager" class="formbold-form-input" name="manager">
+            <option value="" disabled selected hidden>Select Options</option>
+            <option value="false">False</option>
+            <option value="true">True</option>
+        </select>
+        </div>
+      </div>
     </div>
 
 
