--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -82,15 +82,24 @@
         </ul>
 
         <div class="wrapper">
-          <!-- <ul class="header-top-social-list">
+          <ul class="header-top-social-list">
 
+            
+            <!-- Add Sierra Leone Flag -->
             <li>
               <a href="#" class="header-top-social-link">
-                <ion-icon name="logo-facebook"></ion-icon>
+                <img src="./images/sl.png" alt="Sierra Leone" style="width: 20px; height: 20px; border-radius: 50%;">
               </a>
             </li>
 
-            <li>
+
+            <!-- <li>
+              <a href="#" class="header-top-social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li> -->
+
+            <!-- <li>
               <a href="#" class="header-top-social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
@@ -106,9 +115,9 @@
               <a href="#" class="header-top-social-link">
                 <ion-icon name="logo-telegram"></ion-icon>
               </a>
-            </li>
+            </li> -->
 
-          </ul> -->
+          </ul>
           <form action="/logout" method="get">
           <button class="header-top-btn">
             <i class="fas fa-sign-out-alt"></i> Logout
