--- a/views/include/_apartment-detail-admin.ejs
+++ b/views/include/_apartment-detail-admin.ejs
@@ -110,7 +110,7 @@
                             <!-- Placeholder for square footage -->
                             <li class="card-item">
                                 <strong>Apartment ID (AID): AID<%= apartment.aid %></strong>
-                                <a href="/application-form?aid=<%= apartment.aid %>&location=<%= apartment.location %>">
+                                <a href="/admin-application-form?aid=<%= apartment.aid %>&location=<%= apartment.location %>">
                                     <span>Contact site: Administrator</span>
                                     <button class="btn1">Apply</button>
                                 </a>
