--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -76,7 +76,7 @@
         </span>
           <span class="material-icons-outlined">notifications</span>
           <span class="material-icons-outlined"><a href="/all-messages">chat</a></span>
-          <span class="material-icons-outlined"><a href="/admin-home">account_circle</a></span>
+          <span class="material-icons-outlined"><a href="/view/<%= user._id %>">account_circle</a></span>
           <span class="material-icons-outlined"><a href="/logout">logout</a></span>
         </div>
       </header>
