--- a/views/include/_edit-application.ejs
+++ b/views/include/_edit-application.ejs
@@ -172,7 +172,7 @@
           type="text"
           name="createdBy"
           class="formbold-form-input"
-          value="<%= user.fullname %>"
+          value="<%= apply.createdBy %>"
             readonly
         />
         <label for="address" class="formbold-form-label"> Username </label>
@@ -180,7 +180,7 @@
           type="text"
           name="username"
           class="formbold-form-input"
-          value="<%= user.username %>"
+          value="<%= apply.username %>"
           readonly
         />
         </div>
