--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -271,7 +271,7 @@
   
         <p class="section-subtitle">About Us</p>
   
-        <h2 class="h2 section-title">The Leading Real Estate Marketplace in Sierra Leone.</h2>
+        <h2 class="h2 section-title">The Leading Real Estate Marketplace in Nigeri.</h2>
   
         <p class="about-text">
           Welcome to HomeHub SL agency, Sierra Leone's leading real estate marketplace where house owners and 
