--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -271,10 +271,10 @@
   
         <p class="section-subtitle">About Us</p>
   
-        <h2 class="h2 section-title">The Leading Real Estate Marketplace in Nigeri.</h2>
+        <h2 class="h2 section-title">The Leading Real Estate Marketplace in Nigeria.</h2>
   
         <p class="about-text">
-          Welcome to HomeHub SL agency, Sierra Leone's leading real estate marketplace where house owners and 
+          Welcome to HomeHub Ng Agency, Nigeria's leading real estate marketplace where house owners and 
           tenants/buyers connect seamlessly. Our mission is to simplify the real estate experience by 
           providing a comprehensive, user-friendly platform that caters to all your property needs.
         </p>
@@ -316,7 +316,7 @@
         </ul>
   
         <p class="callout">
-          At HomeHub SL Agency, we pride ourselves on being your trusted partner in the real estate market. Our extensive range of services is designed to meet all your housing needs, whether you’re looking to sell, rent, or buy a home. Our dedicated team of experienced professionals is committed to providing personalized support, ensuring that every transaction is smooth and stress-free. <br>
+          At HomeHub Ng Agency, we pride ourselves on being your trusted partner in the real estate market. Our extensive range of services is designed to meet all your housing needs, whether you’re looking to sell, rent, or buy a home. Our dedicated team of experienced professionals is committed to providing personalized support, ensuring that every transaction is smooth and stress-free. <br>
   
           When you choose to sell your home with us, we use our market expertise and innovative strategies to secure the best possible price. For those looking to rent, we offer a diverse selection of properties to match your unique lifestyle and budget. If you’re in the market to buy, our knowledgeable agents will help you find the perfect home that meets all your requirements. <br>
   
