--- a/views/include/_about-admin.ejs
+++ b/views/include/_about-admin.ejs
@@ -12,7 +12,7 @@
       <h2 class="h2 section-title">The Leading Real Estate Marketplace in Nigeria.</h2>
 
       <p class="about-text">
-        Welcome to HomeHub Ng agency, Nigeria's leading real estate marketplace where house owners and 
+        Welcome to HomeHub Ng Agency, Nigeria's leading real estate marketplace where house owners and 
         tenants/buyers connect seamlessly. Our mission is to simplify the real estate experience by 
         providing a comprehensive, user-friendly platform that caters to all your property needs.
       </p>
