--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -85,10 +85,6 @@
               <p class="footer-list-title">Company</p>
             </li>
 
-            <!-- <li>
-              <a href="#" class="footer-link">About</a>
-            </li> -->
-
             <li>
               <a href="#" class="footer-link" onclick="redirectToAbout('<%= role %>')">About</a>
           </li>
@@ -96,18 +92,6 @@
             <li>
               <a href="#" class="footer-link">Blog</a>
             </li>
-
-            <!-- <li>
-              <a href="#" class="footer-link">All Products</a>
-            </li> -->
-
-           <!-- <li>
-              <a href="#" class="footer-link">Locations Map</a>
-            </li> -->
-
-            <!-- <li>
-              <a href="#" class="footer-link">FAQ</a>
-            </li> -->
 
             <li>
               <a href="#" class="footer-link" onclick="redirectToContact('<%= role %>')">Contact us</a>
@@ -117,13 +101,6 @@
               <a href="/view/<%= user._id %>" class="footer-link">Profile</a>
             </li>
 
-            <!-- <li>
-              <form action="/delete-account" method="POST" onsubmit="return confirm('Are you sure you want to delete your account? This action cannot be undone.');">
-                  <input type="hidden" name="_method" value="DELETE">
-                  <button type="submit" class="footer-link btn-link">Delete Account</button>
-              </form>
-          </li> -->
-
           </ul>
 
           <ul class="footer-list">
@@ -131,10 +108,6 @@
            <li>
               <p class="footer-list-title">Services</p>
             </li>
-
-           <!-- <li>
-              <a href="#" class="footer-link">Order tracking</a>
-            </li> -->
 
             <li>
               <a href="/registration-process-statement" class="footer-link">Registration Process Statement</a>
@@ -168,16 +141,8 @@
               <a href="/update-password/<%= user._id %>" class="footer-link">Change password</a>
             </li>
 
-            <!-- <li>
-              <a href="#" class="footer-link">Wish List</a>
-            </li> -->
-
-            <!-- <li>
-              <a href="#" class="footer-link">Order tracking</a>
-            </li> -->
-
             <li>
-              <a href="/faq" class="footer-link">FAQ</a>
+              <a href="#" class="footer-link" onclick="redirectToFaq('<%= role %>')">FAQ</a>
             </li>
 
             <li>
@@ -238,6 +203,16 @@
           window.location.href = '/contact';
       }
   }
+
+   // Redirect to the faq page
+   function redirectToFaq(role) {
+      if (role === 'admin') {
+          window.location.href = '/faq-admin';
+      } else if (role === 'user') {
+          window.location.href = '/faq';
+      }
+  }
+</script>
 </script>
 </body>
 
