--- a/views/include/_footer-guest.ejs
+++ b/views/include/_footer-guest.ejs
@@ -50,7 +50,7 @@
           <ul class="social-list">
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://www.facebook.com/profile.php?id=61561142654243" class="social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
